Markus First Commit

--- a/main.tex
+++ b/main.tex
@@ -8,6 +8,7 @@
     This is the beginning of our diploma thesis
 
     and this is the second part
-    asfdadf
+    
+    Hallo Markus
 
 \end{document}
