--- a/main.tex
+++ b/main.tex
@@ -1,13 +1,72 @@
 \documentclass[a4paper, 11pt]{scrartcl}
 \usepackage[utf8]{inputenc}
- 
+\usepackage[T1]{fontenc}
+
+\title{Diploma thesis HappyFlow}
+\author{Markus Schuster, Daniel Pressnitz, Pascal Klug, Simon Mlatschnik}
+
  
 \begin{document}
  
-    This is the beginning of our diploma thesis
+    \maketitle
 
-    and this is the second part
+    \tableofcontents
+
+    \section{Introduction}
+
+        This is the beginning of the Introduction
+
+    \section{Eidesstaatliche Erklärung}
+        This is the beginning of this section
     
-    asdfadsf
+    \section{Sperrvermerk}
+        This is the beginning of this section
+    
+    \section{Danksagung}
+        This is the beginning of this section
+
+    \section{Vorwort}
+        This is the beginning of this section
+        
+    \section{Abstract in german language}
+        This is the beginning of this section
+
+    \section{Abstract in english language}
+        This is the beginning of this section
+
+    \section{Aufgabenstellung}
+        This is the beginning of this section
+
+    \section{Ausgangslage und Problemstellung}
+        This is the beginning of this section
+
+    \section{Theoratical background}
+        This is the beginning of this section
+
+    \section{Wanted result}
+        This is the beginning of this section
+    \section{Organisation}
+        This is the beginning of this section
+
+    \section{Project members}
+        This is the beginning of this section
+
+    \section{Communication with the company}
+        This is the beginning of this section
+
+    \section{Project basics}
+        This is the beginning of this section
+
+    \section{technologies}
+
+        \subsection{SWT}
+
+        \subsection{Eclipse}
+
+        \subsection{Java}
+
+        \subsection{Slack}
+
+        \subsection{Git}
 
 \end{document}
