--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,11 @@
-\documentclass[a4paper, 11pt]{scrartcl}
+\documentclass[11pt]{scrartcl}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
+\usepackage{a4wide}
+\usepackage[english]{babel}
+
+
+
 
 \title{Diploma thesis HappyFlow}
 \author{Markus Schuster, Daniel Pressnitz, Pascal Klug, Simon Mlatschnik}
@@ -57,7 +62,7 @@
     \section{Project basics}
         This is the beginning of this section
 
-    \section{technologies}
+    \section{Technologies}
 
         \subsection{SWT}
 
